Recent Orders Done

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App {
   text-align: center;
   width: 100vw;
-  /* height: 100vh; */
-  /* background-color: #111315; */
+  height: 100vh;
+  background-color: #111315;
   margin: 0;
   padding: 0;
 }
