--- a/src/components/ItemTile/SingleItemTile.module.css
+++ b/src/components/ItemTile/SingleItemTile.module.css
@@ -16,6 +16,7 @@
    color: white;
    font-size: 1.2rem;
    font-weight: 600;
+   display: inline-block;
 
 }
 
@@ -24,8 +25,6 @@
    color: #999999;
    font-weight: 400;
    font-size: 0.8rem;
-   position: absolute;
-   
 }
 
 .timeTitle{
@@ -35,5 +34,15 @@
    font-size: 1rem;
    position: absolute;
    top: 0.5rem;
+   left: 0.5rem;
+}
+
+.foodTitles{
+   position: absolute;
+   top: 3.5rem;
+   display: flex;
+   flex-direction: column;
+   height: fit-content;
+   padding: 0;
    left: 0.5rem;
 }
